shim/shim.h

    /* Opaque types — defined in the vendored bmesh headers. */
    typedef struct BMesh BMesh;
    typedef struct BMVert BMVert;
    typedef struct BMEdge BMEdge;
    typedef struct BMLoop BMLoop;
    typedef struct BMFace BMFace;
    /* Common header shared by every BM element; used as a type-erased
     * element-pointer in mixed vert/edge/face buffers. */
    typedef struct BMHeader BMHeader;
    /* Mesh lifecycle. */
    BMesh *bms_mesh_create(void);
    void bms_mesh_free(BMesh *bm);
    /* Element creation. */
    BMVert *bms_vert_create(BMesh *bm, const float co[3]);
    /* Like bms_vert_create, but copies customdata (not flags) from `example`. */
    BMVert *bms_vert_create_example(BMesh *bm, const float co[3], BMVert *example);
    BMEdge *bms_edge_create(BMesh *bm, BMVert *v1, BMVert *v2, bool no_double);
    BMFace *bms_face_create_verts(BMesh *bm, BMVert **verts, int len, bool no_double);
    /* Selection + read-only element field accessors. */
    void bms_vert_select_set(BMesh *bm, BMVert *v, bool select);
    void bms_vert_co(const BMVert *v, float out[3]);
    void bms_vert_no(const BMVert *v, float out[3]);
    int bms_elem_htype(const void *elem);
    int bms_elem_hflag(const void *elem);
    int bms_elem_api_flag(const void *elem);
    /* OR / AND-NOT / XOR a single hflag bit on `head.hflag`. `hflag_bit`
     * is an `BM_ELEM_*` mask (e.g. BM_ELEM_SELECT). Multiple bits OR'd
     * into a single mask are accepted; the operation applies to all set
     * bits in one shot. `elem` may be any element type (vert / edge /
     * loop / face) since BMHeader is uniformly the first field. */
    void bms_elem_set_hflag(void *elem, int hflag_bit);
    void bms_elem_clear_hflag(void *elem, int hflag_bit);
    void bms_elem_toggle_hflag(void *elem, int hflag_bit);
    /* Get / set a face's `mat_nr` (the material-slot index). */
    short bms_face_get_mat_nr(const BMFace *f);
    void bms_face_set_mat_nr(BMFace *f, short mat_nr);
    /* Element deletion. */
    void bms_vert_kill(BMesh *bm, BMVert *v);
    void bms_edge_kill(BMesh *bm, BMEdge *e);
    void bms_face_kill(BMesh *bm, BMFace *f);
    /* Splice / merge. */
    bool bms_vert_splice(BMesh *bm, BMVert *v_dst, BMVert *v_src);
    bool bms_edge_splice(BMesh *bm, BMEdge *e_dst, BMEdge *e_src);
    /* Kernel Euler operators. */
    BMFace *bms_sfme(BMesh *bm, BMFace *f, BMLoop *l_v1, BMLoop *l_v2);
    BMVert *bms_semv(BMesh *bm, BMVert *tv, BMEdge *e, BMEdge **r_e);
    BMEdge *bms_jekv(BMesh *bm, BMEdge *e_kill, BMVert *v_kill);
    BMVert *bms_jvke(BMesh *bm, BMEdge *e_kill, BMVert *v_kill);
    BMFace *bms_jfke(BMesh *bm, BMFace *f1, BMFace *f2, BMEdge *e);
    void bms_loop_reverse(BMesh *bm, BMFace *f);
    BMEdge *bms_edge_separate(BMesh *bm, BMEdge *e, BMLoop *l_sep);
    /* bms_faces_join_ex in the deleting mode, reporting-but-discarding any
     * double: an existing coincident face is left standing alongside the newly
     * joined one. */
    BMFace *bms_faces_join(BMesh *bm, BMFace **faces, int totface);
    /* Compute the 3D convex hull of a raw point cloud, exposing the hull
     * engine's face loops directly. This is a pure geometry entry point: it
     * builds no mesh and touches no BMesh state. It is the same engine, on the
     * same code path, that the `convex_hull` operator uses internally.
     *
     *   - `coords`     — `coords_len` input points. May be null only when
     *                    `coords_len == 0`.
     *
     * Three parallel outputs describe the hull:
     *
     *   - `out_orig_index[h]` — for each hull vertex `h`, the index into
     *                           `coords` of the input point it came from.
     *                           Input points that are not on the hull (and
     *                           duplicates merged by the engine) have no hull
     *                           vertex, so this mapping is injective but not
     *                           onto. Capacity `out_verts_cap`; true length
     *                           reported in `*r_verts_len`.
     *   - `out_face_sizes[f]` — the loop length of hull facet `f`. Facets are
     *                           the engine's own — coplanar facets are already
     *                           merged into a single n-gon, so a facet is not
     *                           necessarily a triangle. Capacity
     *                           `out_faces_cap`; true length (the facet count)
     *                           reported in `*r_faces_len`.
     *   - `out_loops`         — the facets' vertex loops, concatenated in
     *                           facet order: facet `f` occupies the
     *                           `out_face_sizes[f]` entries following those of
     *                           facets `0..f-1`. Each entry is a *hull* vertex
     *                           index (an index into the `out_orig_index`
     *                           mapping above, not into `coords`). Capacity
     *                           `out_loops_cap`; true total length reported in
     *                           `*r_loops_len`.
     *
     * Each loop is reported exactly as the engine emits it: same starting
     * vertex, same winding (outward-facing), no sorting, rotation or
     * renormalisation of any kind, and no facet is dropped -- a degenerate
     * facet of fewer than three vertices, should the engine ever emit one, is
     * reported with its true size rather than filtered out. Loops are
     * truncated only by the caps.
     *
     * For each output, a reported length greater than its cap signals
     * truncation, and the buffer may be null only when its cap is zero
     * (size-probing mode: pass all three caps as zero to learn the sizes,
     * then call again with buffers).
     *
     * A hull needs at least four non-coplanar points. When the input is empty,
     * or degenerate (all points coincident, collinear or coplanar), the engine
     * may report a hull with no facets; the vertex list can still be
     * non-empty. Callers should treat `*r_faces_len == 0` as "no volumetric
     * hull", not as an error.
     *
     * Returns 0 on success, or -1 if the input was rejected (null `coords`
     * with a non-zero `coords_len`, or a negative length or capacity). */
    int bms_convex_hull_compute(const float (*coords)[3], int coords_len,
                                int *out_orig_index, int out_verts_cap,
                                int *r_verts_len,
                                int *out_loops, int out_loops_cap,
                                int *r_loops_len,
                                int *out_face_sizes, int out_faces_cap,
                                int *r_faces_len);