src/lib.rs

//! Low-level FFI bindings to Blender's BMesh.
//!
//! All symbols here are `extern "C"` wrappers exported from `shim/shim.cc`.
//! The wrappers are deliberately prefixed `bms_*` (BMesh-Shim) so the FFI
//! surface is decoupled from Blender's own (C++ name-mangled) symbol names.

#![allow(non_camel_case_types, non_snake_case)]

use std::os::raw::c_int;

// ---- Opaque element types ----
//
// All struct fields live behind the FFI boundary; consumers only ever
// hold raw pointers.

#[repr(C)]
pub struct BMesh {
    _private: [u8; 0],
}
#[repr(C)]
pub struct BMVert {
    _private: [u8; 0],
}
#[repr(C)]
pub struct BMEdge {
    _private: [u8; 0],
}
#[repr(C)]
pub struct BMLoop {
    _private: [u8; 0],
}
#[repr(C)]
pub struct BMFace {
    _private: [u8; 0],
}
/// Common header shared by every BM element. Any element pointer can be
/// cast to `*mut BMHeader` for use in type-erased, mixed-element buffers.
#[repr(C)]
pub struct BMHeader {
    _private: [u8; 0],
}

// ---- Mesh lifecycle ----

unsafe extern "C" {
    pub fn bms_mesh_create() -> *mut BMesh;
    pub fn bms_mesh_free(bm: *mut BMesh);
}

// ---- Element creation ----

unsafe extern "C" {
    pub fn bms_vert_create(bm: *mut BMesh, co: *const f32) -> *mut BMVert;
    /// Like [`bms_vert_create`], but copies customdata (not flags) from `example`.
    pub fn bms_vert_create_example(
        bm: *mut BMesh,
        co: *const f32,
        example: *mut BMVert,
    ) -> *mut BMVert;
    pub fn bms_edge_create(
        bm: *mut BMesh,
        v1: *mut BMVert,
        v2: *mut BMVert,
        no_double: bool,
    ) -> *mut BMEdge;
    pub fn bms_face_create_verts(
        bm: *mut BMesh,
        verts: *const *mut BMVert,
        len: c_int,
        no_double: bool,
    ) -> *mut BMFace;
}

// ---- Element deletion ----

unsafe extern "C" {
    pub fn bms_vert_kill(bm: *mut BMesh, v: *mut BMVert);
    pub fn bms_edge_kill(bm: *mut BMesh, e: *mut BMEdge);
    pub fn bms_face_kill(bm: *mut BMesh, f: *mut BMFace);
}

// ---- Selection + read-only element field accessors ----

unsafe extern "C" {
    pub fn bms_vert_select_set(bm: *mut BMesh, v: *mut BMVert, select: bool);
    /// Copy the vertex coordinate into `out` (3 floats).
    pub fn bms_vert_co(v: *const BMVert, out: *mut f32);
    /// Copy the vertex normal into `out` (3 floats).
    pub fn bms_vert_no(v: *const BMVert, out: *mut f32);
    /// `head.htype` — element geometric type (`BM_VERT=1`, `BM_EDGE=2`, …).
    pub fn bms_elem_htype(elem: *const std::ffi::c_void) -> c_int;
    /// `head.hflag` — public element flags (e.g. `BM_ELEM_SELECT = 1<<0`).
    pub fn bms_elem_hflag(elem: *const std::ffi::c_void) -> c_int;
    /// `head.api_flag` — transient operator-scratch flags.
    pub fn bms_elem_api_flag(elem: *const std::ffi::c_void) -> c_int;

    /// OR `hflag_bit` into `head.hflag` on any BM element.
    pub fn bms_elem_set_hflag(elem: *mut std::ffi::c_void, hflag_bit: c_int);
    /// AND-out `hflag_bit` from `head.hflag` on any BM element.
    pub fn bms_elem_clear_hflag(elem: *mut std::ffi::c_void, hflag_bit: c_int);
    /// XOR `hflag_bit` into `head.hflag` on any BM element.
    pub fn bms_elem_toggle_hflag(elem: *mut std::ffi::c_void, hflag_bit: c_int);
}

/// `head.htype` value for a vertex (mirrors BMesh's `BM_VERT`).
pub const BM_VERT: c_int = 1;
/// `head.hflag` select bit (mirrors BMesh's `BM_ELEM_SELECT`).
pub const BM_ELEM_SELECT: c_int = 1 << 0;

// ---- Element hflag bits ----
//
// These mirror BMesh's `BMHeader.hflag` bits. Combine with `|`. Note the
// `HIDE` name matches Blender's `BM_ELEM_HIDDEN` bit (the name `HIDE` is
// the conventional shorthand and what the FFI exposes).

/// `BM_ELEM_SELECT` — element-is-selected bit.
pub const BMS_ELEM_HFLAG_SELECT: c_int = 1 << 0;
/// `BM_ELEM_HIDDEN` — element-is-hidden bit.
pub const BMS_ELEM_HFLAG_HIDE: c_int = 1 << 1;
/// `BM_ELEM_SEAM` — edge-is-a-UV-seam bit (also reused as
/// `BM_ELEM_SELECT_UV_EDGE` for loops).
pub const BMS_ELEM_HFLAG_SEAM: c_int = 1 << 2;
/// `BM_ELEM_SMOOTH` — face/edge smooth-shaded bit (cleared = sharp).
pub const BMS_ELEM_HFLAG_SMOOTH: c_int = 1 << 3;
/// `BM_ELEM_TAG` — general-purpose scratch bit (assume dirty; clear before use).
pub const BMS_ELEM_HFLAG_TAG: c_int = 1 << 4;
/// `BM_ELEM_SELECT_UV` — loop-vertex UV selection / face selection bit.
pub const BMS_ELEM_HFLAG_SELECT_UV: c_int = 1 << 5;
/// `BM_ELEM_TAG_ALT` — secondary scratch bit (assume dirty; clear before use).
pub const BMS_ELEM_HFLAG_TAG_ALT: c_int = 1 << 6;
/// `BM_ELEM_INTERNAL_TAG` — reserved for low-level internal tagging
/// (callers should leave cleared).
pub const BMS_ELEM_HFLAG_INTERNAL_TAG: c_int = 1 << 7;

// ---- Splice / merge ----

unsafe extern "C" {
    pub fn bms_vert_splice(bm: *mut BMesh, v_dst: *mut BMVert, v_src: *mut BMVert) -> bool;
    pub fn bms_edge_splice(bm: *mut BMesh, e_dst: *mut BMEdge, e_src: *mut BMEdge) -> bool;
}

// ---- Kernel Euler operators ----

unsafe extern "C" {
    /// SFME — Split Face, Make Edge.
    /// bmesh: `bmesh_kernel_split_face_make_edge`
    pub fn bms_sfme(
        bm: *mut BMesh,
        f: *mut BMFace,
        l_v1: *mut BMLoop,
        l_v2: *mut BMLoop,
    ) -> *mut BMFace;

    /// SEMV — Split Edge, Make Vert.
    /// bmesh: `bmesh_kernel_split_edge_make_vert`
    pub fn bms_semv(
        bm: *mut BMesh,
        tv: *mut BMVert,
        e: *mut BMEdge,
        r_e: *mut *mut BMEdge,
    ) -> *mut BMVert;

    /// JEKV — Join Edge, Kill Vert (collapse degree-2 vertex).
    /// bmesh: `bmesh_kernel_join_edge_kill_vert`
    pub fn bms_jekv(bm: *mut BMesh, e_kill: *mut BMEdge, v_kill: *mut BMVert) -> *mut BMEdge;

    /// JVKE — Join Vert, Kill Edge (general edge collapse).
    /// bmesh: `bmesh_kernel_join_vert_kill_edge`
    pub fn bms_jvke(bm: *mut BMesh, e_kill: *mut BMEdge, v_kill: *mut BMVert) -> *mut BMVert;

    /// JFKE — Join Face, Kill Edge.
    /// bmesh: `bmesh_kernel_join_face_kill_edge`
    pub fn bms_jfke(
        bm: *mut BMesh,
        f1: *mut BMFace,
        f2: *mut BMFace,
        e: *mut BMEdge,
    ) -> *mut BMFace;

    /// bmesh: `bmesh_kernel_loop_reverse`
    pub fn bms_loop_reverse(bm: *mut BMesh, f: *mut BMFace);

    /// bmesh: `bmesh_kernel_edge_separate`
    pub fn bms_edge_separate(bm: *mut BMesh, e: *mut BMEdge, l_sep: *mut BMLoop) -> *mut BMEdge;

    // Query helpers — for the A/B harness.

    /// bmesh: `BM_edge_exists`. Null if no edge connects the two verts.
    pub fn bms_edge_exists(v1: *mut BMVert, v2: *mut BMVert) -> *mut BMEdge;

    /// bmesh: `BM_face_vert_share_loop`. The loop in `f`'s cycle whose vertex is `v`.
    pub fn bms_face_vert_share_loop(f: *mut BMFace, v: *mut BMVert) -> *mut BMLoop;

    /// bmesh: `BM_face_edge_share_loop`. The loop in `f`'s cycle whose edge is `e`.
    pub fn bms_face_edge_share_loop(f: *mut BMFace, e: *mut BMEdge) -> *mut BMLoop;

    /// bmesh: `f->l_first`. One loop of the face's loop cycle — caller walks
    /// the cycle via `bms_loop_next`. Returns null if the face has no loops.
    pub fn bms_face_first_loop(f: *mut BMFace) -> *mut BMLoop;

    /// bmesh: `l->next`. The next loop around `l`'s face cycle.
    pub fn bms_loop_next(l: *mut BMLoop) -> *mut BMLoop;

    /// bmesh: `l->v`. Returns the loop's vertex.
    pub fn bms_loop_vert(l: *mut BMLoop) -> *mut BMVert;

    /// bmesh: `f->mat_nr`. Returns the face's material-slot index.
    pub fn bms_face_get_mat_nr(f: *const BMFace) -> std::os::raw::c_short;

    /// bmesh: `f->mat_nr = mat_nr`. Writes the face's material-slot index.
    pub fn bms_face_set_mat_nr(f: *mut BMFace, mat_nr: std::os::raw::c_short);

    // High-level wrappers.

    /// bmesh: `BM_edge_rotate` with `check_flag = 0`.
    pub fn bms_edge_rotate(bm: *mut BMesh, e: *mut BMEdge, ccw: bool) -> *mut BMEdge;

    /// bmesh: `BM_faces_join` with `do_del=true`. Joins N faces into one.
    pub fn bms_faces_join(bm: *mut BMesh, faces: *mut *mut BMFace, totface: c_int) -> *mut BMFace;

    /// bmesh: `BM_edge_collapse`. Collapses an edge by killing one of its
    /// vertices; the other endpoint absorbs all of v_kill's other edges.
    pub fn bms_edge_collapse(
        bm: *mut BMesh,
        e_kill: *mut BMEdge,
        v_kill: *mut BMVert,
    ) -> *mut BMVert;

    /// bmesh: `bmesh_kernel_vert_separate`. Returns the number of resulting
    /// vertices (input + newly-created fans). If `out_verts` non-null and
    /// `out_verts_cap >= return-value`, fills `out_verts` with the resulting
    /// vertex pointers (first = input `v`).
    pub fn bms_vert_separate(
        bm: *mut BMesh,
        v: *mut BMVert,
        out_verts: *mut *mut BMVert,
        out_verts_cap: c_int,
    ) -> c_int;

    /// bmesh: `bmesh_kernel_unglue_region_make_vert`. Peels the corner at
    /// `l_sep` away from its vertex's fan, creating a new vertex for it.
    pub fn bms_unglue_region_make_vert(bm: *mut BMesh, l_sep: *mut BMLoop) -> *mut BMVert;

    // ---- Phase M: subdivision basics ----

    /// bmesh: `BM_edge_split`. Parameterized split — new vertex at
    /// `lerp(v.co, other_endpoint.co, fac)`. If `r_e` is non-null, writes
    /// the new edge (the half adjacent to `v`) into it.
    pub fn bms_edge_split(
        bm: *mut BMesh,
        e: *mut BMEdge,
        v: *mut BMVert,
        fac: f32,
        r_e: *mut *mut BMEdge,
    ) -> *mut BMVert;

    /// bmesh: `BM_edge_split_n`. Uniformly subdivides into `numcuts + 1`
    /// segments; writes the `numcuts` new vertex pointers into `r_varr`.
    /// Returns the count actually written.
    pub fn bms_edge_split_n(
        bm: *mut BMesh,
        e: *mut BMEdge,
        numcuts: c_int,
        r_varr: *mut *mut BMVert,
    ) -> c_int;

    /// bmesh: `BM_face_split_n` with loop lookup by vertex. `cos` is a
    /// `n * 3` float buffer (positions for intermediate vertices). Returns
    /// the new face on success, null on failure.
    pub fn bms_face_split_n(
        bm: *mut BMesh,
        face: *mut BMFace,
        v1: *mut BMVert,
        v2: *mut BMVert,
        cos: *mut f32,
        n: c_int,
    ) -> *mut BMFace;

    /// Like `BM_face_poke` with offset=0: insert a centre vertex at the
    /// face's median position and fan-triangulate. Hand-composed in the
    /// shim because the bmesh tools/ tree isn't vendored. Equivalent to
    /// `bms_face_poke_mode(bm, face, 0)`. Returns the new centre vertex, or
    /// null if the face has fewer than 3 corners (or exceeds the internal
    /// ngon capacity).
    pub fn bms_face_poke(bm: *mut BMesh, face: *mut BMFace) -> *mut BMVert;

    /// Like [`bms_face_poke`], but selects the poke centre formula via
    /// `center_mode` (ordering matches the poke BMOP's `eCenterMode`):
    /// `0` = MEAN (uniform centroid), `1` = BOUNDS (axis-aligned bbox
    /// centre), `2` = MEAN_WEIGHTED (edge-length-weighted centroid, falling
    /// back to MEAN when the total weight is non-positive). Any other value
    /// behaves as MEAN. Only the centre position differs between modes; the
    /// fan-triangulation and customdata interpolation are identical. Returns
    /// the new centre vertex, or null if the face has fewer than 3 corners
    /// (or exceeds the internal ngon capacity).
    pub fn bms_face_poke_mode(
        bm: *mut BMesh,
        face: *mut BMFace,
        center_mode: c_int,
    ) -> *mut BMVert;
